2010-07-04  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf:operation-done-p): Fix reloading on
	ASDF2. ASDF2 no longer has `asdf:around' method combination.

2010-07-02  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (docstring-ispec): Don't insert an
	unnecessary space.
	(emacs-inspect): Delete unnecessary "it" in [... it]
	buttons.
	Don't capitalize every word in some messages.

2010-06-15  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf-central-registry): Use an exported
	interface for ASDF2.

2010-06-14  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf-central-registry): ASDF2 compatibility.
	Patch by Leo Liu.

2010-06-04  Helmut Eller  <heller@common-lisp.net>

	* inferior-slime.el (inferior-slime-show-transcript): Update
	window point

2010-05-29  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (emacs-inspect): Add [finalize]
	button for not finalized classes.

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	Call provide at the end of the file.

	* slime-asdf.el slime-banner.el slime-clipboard.el
	slime-compiler-notes-tree.el slime-enclosing-context.el
	slime-highlight-edits.el slime-hyperdoc.el slime-indentation.el
	slime-mdot-fu.el slime-motd.el slime-mrepl.el
	slime-presentation-streams.el slime-sbcl-exts.el slime-snapshot.el
	slime-sprof.el slime-tramp.el slime-typeout-frame.el
	slime-xref-browser.el:

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	* slime-c-p-c.el slime-fancy-inspector.el slime-fancy.el
	slime-fontifying-fu.el slime-fuzzy.el slime-package-fu.el
	slime-parse.el slime-presentations.el slime-references.el
	slime-repl.el slime-scratch.el: Call provide at the end of the
	file.

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm (wrap-compilation): Set Compilation.explict flag.
	(list-file): Add cast to resolve overloaded parse method.
	(disassemble-form): Update for change from 2010-05-18.
