@@ -1,3 +1,7 @@
+2010-07-16  Stas Boukarev  <stassats@gmail.com>
+
+	* slime-repl.el (slime-call-defun): Handle setf-functions.
+
 2010-07-04  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-asdf.lisp (asdf:operation-done-p): Fix reloading on
